lang/examples/bad/12-01-static-binging.wdr
fun main(): Void {
  var a: Int = 1;
  var a: String = "b";

  fun test(): Int {
    return a;
  }

  printInt(test());

  return;
}
